Setting port Flask and Next.js

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,16 +16,33 @@ RUN pip install gunicorn
 # Copiar todos los archivos de la aplicación en el contenedor
 COPY . .
 
-# Exponer el puerto que utilizará la aplicación
-EXPOSE 5000
+# Exponer el puerto que utilizará la aplicación --> Gunicorn o uWSGI Server Port
+EXPOSE 8000
+
+# Variables de entorno para configurar Flask
+ENV FLASK_ENV=production
+ENV FLASK_DEBUG=0
+
+# Añadir una variable de entorno de Python para evitar la creación de archivos pyc
+ENV PYTHONDONTWRITEBYTECODE=1
+
+# Añadir una variable de entorno de Python para hacer los logs sin buffer
+ENV PYTHONUNBUFFERED=1
 
 # Establecer la variable de entorno para indicar que estamos en un contenedor Docker
 ENV DOCKERIZED=True
 
+# Limpiar archivos temporales (opcional para reducir el tamaño de la imagen)
+#RUN apt-get update && apt-get install -y --no-install-recommends \
+#    && rm -rf /var/lib/apt/lists/*
+
+# Clean up
+RUN apt-get update && apt-get clean && rm -rf /var/lib/apt/lists/*
+    
 # Comando para ejecutar la aplicación usando Gunicorn
-CMD ["gunicorn", "app:app", \
-     "-w", "2", \
-     "-b", "0.0.0.0:5000", \
+CMD ["gunicorn", "app:app()", \
+     "-w", "1", \
+     "-b", "0.0.0.0:8000", \
      "--timeout", "120", \
      "--graceful-timeout", "120", \
      "--keep-alive", "5"]
