--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -3,9 +3,12 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.js
-.yarn/install-state.gz
-.env
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # testing
 /coverage
@@ -16,26 +19,19 @@
 
 # production
 /build
-/dist
 
 # misc
 .DS_Store
 *.pem
-.idea/
-.vscode/
-*.swp
-*.swo
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# local env files
-.env*.local
-.env.development
-.env.test
-.env.production
+# env files (can opt-in for committing if needed)
+.env*
 
 # vercel
 .vercel
@@ -43,11 +39,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# PWA files
-**/public/sw.js
-**/public/workbox-*.js
-**/public/worker-*.js
-**/public/sw.js.map
-**/public/workbox-*.js.map
-**/public/worker-*.js.map
